# cargo-skeleton

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  test.Dockerfile
man/: README.md  cargo-skeleton-build.1  cargo-skeleton-create.1  cargo-skeleton-mangen.1  cargo-skeleton-unpack.1  cargo-skeleton.1  cargo.1
src/: build.rs  cli.rs  create.rs  lib.rs  lockfile.rs  main.rs  package.rs  unpack.rs  workspace.rs
tests/: create_test.rs  self_test.rs
